<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-parent</artifactId>
            <version>1.5.3.RELEASE</version>
            <relativePath/>
    </parent>

    <modelVersion>4.0.0</modelVersion>
	<groupId>org.jnd</groupId>
	<artifactId>product.backend</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>war</packaging>
	
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <docker.image.prefix>justindav1s</docker.image.prefix>
        <maven.build.timestamp.format>yyMMdd-HHmmss</maven.build.timestamp.format>
		<container.listen.port>8080</container.listen.port>
		<jvm.settings>-XX:PermSize=256m -Xmx512m -Djava.security.egd=file:/dev/./urandom</jvm.settings>
    </properties>

	
	<name>Product Backend</name>
	<description>Product Backend Spring Boot Service</description>


	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!-- JSTL -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
		</dependency>

		<!-- Need this to compile JSP -->
		<dependency>
			<groupId>org.apache.tomcat.embed</groupId>
			<artifactId>tomcat-embed-jasper</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- Need this to compile JSP -->
		<dependency>
			<groupId>org.eclipse.jdt.core.compiler</groupId>
			<artifactId>ecj</artifactId>
			<version>4.6.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.3</version>
		</dependency>
		
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.2.3</version>
        </dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.0</version>
		</dependency>
    </dependencies>


    <dependencyManagement>
        <dependencies>
                <dependency>
                        <groupId>org.springframework.cloud</groupId>
                        <artifactId>spring-cloud-dependencies</artifactId>
                        <version>Brixton.SR7</version>
                        <type>pom</type>
                        <scope>import</scope>
                </dependency>
            </dependencies>
        </dependencyManagement>
        	
	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.0.2</version>
				<executions>
					<execution>
						<id>copy-installed</id>
						<phase>install</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>${project.groupId}</groupId>
									<artifactId>${project.artifactId}</artifactId>
									<version>${project.version}</version>
									<type>${project.packaging}</type>
								</artifactItem>
							</artifactItems>
							<outputDirectory>/app</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>io.fabric8</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>0.21.0</version>
				<configuration>
					<logStdout>true</logStdout>
					<verbose>true</verbose>
					<images>
						<image>
							<!-- alias>${project.artifactId}_${maven.build.timestamp}</alias -->
							<alias>${project.artifactId}</alias>
							<name>${docker.image.prefix}/${project.artifactId}</name>
							<build>
								<from>java:8</from>
								<tags>
									<tag>latest</tag>
								</tags>
								<ports>
									<port>${container.listen.port}</port>
								</ports>
								<maintainer>justinndavis@gmail.com</maintainer>
								<assembly>
									<descriptor>assembly.xml</descriptor>
								</assembly>
								<entryPoint>
									<shell>java ${jvm.settings} -jar /maven/app/${project.build.finalName}.jar</shell>
								</entryPoint>
							</build>
							<run>
								<namingStrategy>alias</namingStrategy>
								<ports>
									<port>host.port:${container.listen.port}</port>
								</ports>
							</run>
						</image>
					</images>
				</configuration>
			</plugin>
		</plugins>
	</build>
	

</project>
